Add thumbnailAvailable property to PlasmaCore.WindowThumbnail

This property tells us whether a thumbnail is actually being rendered or it has
fallen back to the window icon

REVIEW: 120946
BUG: 336524